[tool.poetry]
name = "pyweatherflowudp"
version = "1.2.0"
description = "An event-based asynchronous library to read UDP packets from Weatherflow weather systems on a local network without any reliance on the cloud."
license = "MIT"
authors = ["Nathan Spencer <natekspencer@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/briis/pyweatherflowudp"
repository = "https://github.com/briis/pyweatherflowudp"
keywords = ["WeatherFlow", "UDP", "asynchronous", "local"]

[tool.poetry.dependencies]
python = "^3.8"
Pint = "^0.18"
PsychroLib = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pydocstyle = "^6.1.1"
pylint = "^2.12.1"
pytest = "^5.2"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.0.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
